@@ -1,3 +1,7 @@
+2005-04-25  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* AddIns/AddIn.cs: Added GetType method.
+
 2005-03-24  Raja R Harinath  <rharinath@novell.com>
 
 	* Makefile.am (FILES): Move AssemblyInfo.cs ...
